// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalTrigger renders the UI snapshot correctly 1`] = `
<button
  className="chakra-button css-1aaxv66"
  id="modal-open-btn"
  onClick={[Function]}
  type="button"
>
  Button Text
</button>
`;

exports[`useModal renders the UI snapshot correctly 1`] = `
<button
  className="chakra-button css-1xdhyk6"
  id="1"
  onClick={[Function]}
  type="button"
>
  Open Modal
</button>
`;
